[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Templates/Controller/Controller.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Controller/back_button.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Controller/joystick_bigcircle.png" type="Texture" id=3]
[ext_resource path="res://Assets/Templates/Controller/JoystickController.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sprites/Controller/joystick_smallcircle.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 70.0

[sub_resource type="CircleShape2D" id=2]
radius = 70.0

[sub_resource type="CircleShape2D" id=3]
radius = 70.0

[node name="Controller" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TouchControllSystem" type="Node2D" parent="."]

[node name="BackButton" type="TouchScreenButton" parent="TouchControllSystem"]
position = Vector2( 883.776, -11.1067 )
normal = ExtResource( 2 )
pressed = ExtResource( 2 )

[node name="ControlJoystick" type="Sprite" parent="TouchControllSystem"]
editor/display_folded = true
position = Vector2( 156.25, 444.175 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="TouchButton" type="TouchScreenButton" parent="TouchControllSystem/ControlJoystick"]
editor/display_folded = true
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 1 )
shape_visible = false
visibility_mode = 1
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="TouchControllSystem/ControlJoystick/TouchButton"]
texture = ExtResource( 5 )

[node name="AttackButton" type="TouchScreenButton" parent="TouchControllSystem"]
position = Vector2( 727.208, 340.44 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
shape = SubResource( 2 )
shape_visible = false

[node name="ChangeWeaponButton" type="TouchScreenButton" parent="TouchControllSystem"]
position = Vector2( 889.438, 277.54 )
scale = Vector2( 0.5, 0.5 )
normal = ExtResource( 5 )
pressed = ExtResource( 5 )
shape = SubResource( 3 )
shape_visible = false
[connection signal="pressed" from="TouchControllSystem/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="TouchControllSystem/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="released" from="TouchControllSystem/AttackButton" to="." method="_on_AttackButton_released"]
[connection signal="pressed" from="TouchControllSystem/ChangeWeaponButton" to="." method="_on_ChangeWeaponButton_pressed"]
[connection signal="released" from="TouchControllSystem/ChangeWeaponButton" to="." method="_on_ChangeWeaponButton_released"]
